--- a/src/components/ConfigPage/config.css
+++ b/src/components/ConfigPage/config.css
@@ -14,6 +14,8 @@
 .title {
     font-size: 24px;
     color: var(--text-color-primary);
+    margin-bottom: 10px;
+    font-weight: 900;
 }
 
 .row {
