--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -135,3 +135,16 @@ body, p {
     box-sizing: border-box;
     border-radius: 4px;
 }
+
+.notLinked {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+}
+.notLinked input {
+    margin: 0;
+}
